testsuite/tests/quantified-constraints/T21006.stderr

T21006.hs:14:10: error:
    • Could not deduce c
        arising from the superclasses of an instance declaration
      from the context: (Determines b, Determines c)
        bound by a quantified context at T21006.hs:14:10-15
    • In the instance declaration for ‘OpCode’
